# deczoo

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: broken-links.yaml  code-check.yml  deploy-docs.yaml  pre-commit-update.yaml  pull-request.yaml
api/decorators/: index.html
api/utils/: index.html
bodec/: function_decorators.py
contribute/: index.html
decorators/advanced/: index.html
decorators/intro/: index.html
deczoo/: __init__.py  _base_notifier.py  _core.py  _logging_fn.py  _types.py  _utils.py  class_decorators.py  core.py  decorators.py  function_decorators.py
docs/: contribute.md  index.md  quickstart.md
docs/api/: decorators.md  utils.md
docs/decorators/: advanced.md  intro.md
docs/quickstart/: examples.md
notebooks/: dev_nb.ipynb
quickstart/: index.html
quickstart/examples/: index.html
scripts/: predict.py  train.py
search/: search_index.json
tests/: _base_notifier_test.py  conftest.py
tests/decorators_test/: call_counter_test.py  catch_test.py  check_args_test.py  chime_on_end_test.py  log_test.py  memory_limit_test.py  multi_shape_tracker.py  multi_shape_tracker_test.py  notify_on_end_test.py  raise_if_test.py  retry_test.py  shape_tracker_test.py  timeout_test.py
tests/test_decorators/: call_counter_test.py  catch_test.py  check_args_test.py  memory_limit_test.py  timeout_test.py
tests/utils_test/: check_parens_test.py  empty_shape_error_test.py  get_free_memory_test.py  has_shape_test.py
