[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deczoo"
version = "0.5.1"
description = "Zoo for Python decorators"

license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Francesco Bruzzesi"}]

[project.urls]
documentation = "https://fbruzzesi.github.io/deczoo/"
repository = "https://github.com/fbruzzesi/deczoo"
issue-tracker = "https://github.com/fbruzzesi/deczoo/issues"


[project.optional-dependencies]
chime = ["chime"]
rich = ["rich>=12.0.0"]

dev = [
    "black==23.3.0",
    "interrogate==1.5.0",
    "isort==5.12.0",
    "pre-commit==2.21.0",
    "pytest==7.2.0",
    "pytest-xdist==3.2.1",
    "coverage==7.2.1",
    "coverage-badge==1.1.0",
    "numpy", # required for testing
    "ruff"
]

docs = [
    "mkdocs==1.4.2",
    "mkdocs-material==9.1.2",
    "mkdocstrings[python]==0.20.0",
]

all = ["deczoo[chime,rich,dev,docs]"]

[tool.setuptools.packages.find]
include = ["deczoo*"]
exclude = ["docs", "tests", "data", "docker", "results", "notebooks", "kubernetes"]

[tool.setuptools.package-data]
deczoo = ["py.typed"]

[tool.black]
line-length = 90
target_version = ['py38']

[tool.isort]
py_version = 310
profile = "black"
line_length = 90

[tool.ruff]
line-length = 90

[tool.mypy]
ignore_missing_imports = true
