[metadata]
name = deczoo
version = 0.2.0
author = Francesco Bruzzesi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://fbruzzesi.github.io/deczoo/
license = MIT License
requires-python = >=3.8

[options]
packages =
    deczoo
zip_safe = True
install_requires =
    chime>=0.6.0

[options.extras_require]
rich =
    rich>=12.0.0

dev =
    black==22.12.0
    interrogate==1.5.0
    isort==5.10.1
    pre-commit==2.21.0
    pytest==7.2.0

doc =
    mkdocs==1.4.2
    mkdocs-material==9.0.0
    mkdocstrings==0.19.1

[options.packages.find]
exclude =
    docs*
    tests*
